更新奖励 领取 代码

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -575,7 +575,6 @@
   "You're a helpful assistant.": "Sie sind ein hilfreicher Assistent.",
   "You're now logged in.": "Sie sind jetzt eingeloggt.",
   "Your Basic Plan": "Ihr Grundplan",
-  "Your face has been used": "Ihr Gesicht wurde verwendet",
   "Youtube": "Youtube",
   "Youtube Loader Settings": "Youtube-Loader-Einstellungen",
   "Invalid private key": "Ungültiger privater Schlüssel",
@@ -638,6 +637,12 @@
   "You have received 100 DGC points !": "Sie haben 100 DGC-Punkte erhalten!",
   "Failed to received reward": "Es ist nicht möglich, die Belohnung zu erhalten.",
   "You Rewards History not found": "Ihre Belohnungsgeschichte wurde nicht gefunden.",
+  "Try again": "Versuchen Sie es erneut",
+  "Time expired, try again": "Die Zeit ist abgelaufen, versuchen Sie es erneut",
+  "Your face has been used": "Ihr Gesicht wurde bereits genutzt",
+  "Your kyc rewards have been credited.": "Ihre KYC-Belohnungen wurden gutgeschrieben.",
+  "The identity validate fail": "Die Identitätsüberprüfung ist fehlgeschlagen",
+  "Your haven't started live testing yet": "Sie haben die Live-Tests noch nicht begonnen",
   "I. New User Creation Reward": "I. Belohnung für die Erstellung eines neuen Benutzers",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Nach der Vervollständigung der Authentifizierung eines neuen Benutzers erhält man eine <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC-Belohnung.",
   "II. Referral Reward": "II. Empfehlungsbelohnung",
