--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -575,7 +575,6 @@
   "You're a helpful assistant.": "",
   "You're now logged in.": "",
   "Your Basic Plan": "",
-  "Your face has been used": "",
   "Youtube": "",
   "Youtube Loader Settings": "",
   "Invalid private key": "",
@@ -638,6 +637,12 @@
   "You have received 100 DGC points !": "",
   "Failed to received reward": "",
   "You Rewards History not found": "",
+  "Try again": "",
+  "Time expired, try again": "",
+  "Your face has been used": "",
+  "Your kyc rewards have been credited.": "",
+  "The identity validate fail": "",
+  "Your haven't started live testing yet": "",
   "I. New User Creation Reward": "",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "",
   "II. Referral Reward": "",
