--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -575,7 +575,6 @@
   "You're a helpful assistant.": "Eres un asistente útil.",
   "You're now logged in.": "Ahora estás conectado.",
   "Your Basic Plan": "Tu plan básico",
-  "Your face has been used": "Tu cara ha sido usada",
   "Youtube": "Youtube",
   "Youtube Loader Settings": "Ajustes de cargador Youtube",
   "Invalid private key": "Llave privada no válida",
@@ -638,6 +637,12 @@
   "You have received 100 DGC points !": "Has recibido 100 puntos DGC!",
   "Failed to received reward": "No se logró recibir la recompensa.",
   "You Rewards History not found": "No se ha encontrado el historial de tus recompensas.",
+  "Try again": "Inténtalo de nuevo",
+  "Time expired, try again": "Se ha agotado el tiempo, inténtalo de nuevo",
+  "Your face has been used": "Tu cara ya ha sido utilizada",
+  "Your kyc rewards have been credited.": "Tus recompensas de KYC han sido acreditadas.",
+  "The identity validate fail": "La validación de la identidad ha fallado",
+  "Your haven't started live testing yet": "Todavía no has comenzado las pruebas en vivo",
   "I. New User Creation Reward": "I. Recompensa por la Creación de un Nuevo Usuario",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Después de completar la autenticación del nuevo usuario, recibe una recompensa de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Recompensa por Recomendación",
