--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -574,7 +574,6 @@
   "You're a helpful assistant.": "Vous êtes un assistant utile.",
   "You're now logged in.": "Vous êtes maintenant connecté.",
   "Your Basic Plan": "Votre plan de base",
-  "Your face has been used": "Votre visage a été utilisé",
   "Youtube": "Youtube",
   "Youtube Loader Settings": "Paramètres du chargeur Youtube",
   "Invalid private key": "Clé privée invalide",
@@ -637,6 +636,12 @@
   "You have received 100 DGC points !": "Vous avez reçu 100 points DGC!",
   "Failed to received reward": "Échec de la réception de la récompense",
   "You Rewards History not found": "Aucune historique de vos récompenses n'a été trouvée.",
+  "Try again": "Essaye encore",
+  "Time expired, try again": "Le temps est écoulé, essaie encore",
+  "Your face has been used": "Votre visage a déjà été utilisé",
+  "Your kyc rewards have been credited.": "Vos récompenses de KYC ont été créditées.",
+  "The identity validate fail": "La validation de l'identité a échoué",
+  "Your haven't started live testing yet": "Vous n'avez pas encore commencé les tests en direct",
   "I. New User Creation Reward": "I. Récompense pour la création d'un nouvel utilisateur",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Après avoir effectué l'authentification du nouvel utilisateur, recevez une récompense de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Récompense pour la recommandation",
