--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -575,7 +575,6 @@
   "You're a helpful assistant.": "Anda adalah asisten yang membantu.",
   "You're now logged in.": "Anda sekarang masuk.",
   "Your Basic Plan": "Rencana Dasar Anda",
-  "Your face has been used": "Wajah Anda telah digunakan",
   "Youtube": "Youtube",
   "Youtube Loader Settings": "Pengaturan Loader Youtube",
   "Invalid private key": "Kunci pribadi tidak valid",
@@ -638,6 +637,12 @@
   "You have received 100 DGC points !": "Anda telah menerima 100 poin DGC!",
   "Failed to received reward": "Gagal menerima hadiah.",
   "You Rewards History not found": "Riwayat hadiah Anda tidak ditemukan.",
+  "Try again": "Coba lagi",
+  "Time expired, try again": "Waktu telah habis, coba lagi",
+  "Your face has been used": "Wajah Anda telah digunakan",
+  "Your kyc rewards have been credited.": "Hadiah KYC Anda telah dikreditkan.",
+  "The identity validate fail": "Validasi identitas gagal",
+  "Your haven't started live testing yet": "Anda belum memulai pengujian langsung",
   "I. New User Creation Reward": "I. Hadiah Pembuatan Pengguna Baru",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Setelah menyelesaikan autentikasi pengguna baru, terima hadiah sebesar <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Hadiah Rujukan",
