--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -577,7 +577,6 @@
   "You're a helpful assistant.": "あなたは役に立つアシスタントです。",
   "You're now logged in.": "あなたは今ログインしています。",
   "Your Basic Plan": "あなたの基本プラン",
-  "Your face has been used": "あなたの顔が使用されました",
   "Youtube": "YouTube",
   "Youtube Loader Settings": "YouTube ローダー設定",
   "Invalid private key": "無効な秘密鍵",
@@ -638,6 +637,12 @@
   "You have received 100 DGC points !": "あなたは 100 の DGC ポイントを受け取りました！",
   "Failed to received reward": "報酬を受け取ることができませんでした。",
   "You Rewards History not found": "あなたの報酬履歴が見つかりません。",
+  "Try again": "もう一度試してください",
+  "Time expired, try again": "時間が切れました。もう一度試してください",
+  "Your face has been used": "あなたの顔は既に使われています",
+  "Your kyc rewards have been credited.": "あなたの KYC 報酬は既に入金されました",
+  "The identity validate fail": "本人確認に失敗しました",
+  "Your haven't started live testing yet": "あなたはまだライブテストを始めていません",
   "I. New User Creation Reward": "I. 新規ユーザー作成報酬",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": " 新規ユーザー認証を完了した後、<span style='color: rgba(184, 142, 86, 1);'>1000</span>個の DGC 報酬を受け取ります。",
   "II. Referral Reward": "II. 紹介報酬",
