--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -575,7 +575,6 @@
   "You're a helpful assistant.": "당신은 유용한 조수입니다.",
   "You're now logged in.": "당신은 이제 로그인되어 있습니다.",
   "Your Basic Plan": "당신의 기본 계획",
-  "Your face has been used": "당신의 얼굴이 사용되었습니다.",
   "Youtube": "유튜브",
   "Youtube Loader Settings": "유튜브 로더 설정",
   "Invalid private key": "유효하지 않은 개인 키",
@@ -638,6 +637,12 @@
   "You have received 100 DGC points !": "100개의 DGC 포인트를 받았습니다!",
   "Failed to received reward": "보상 수령에 실패했습니다.",
   "You Rewards History not found": "보상 기록이 발견되지 않습니다.",
+  "Try again": "다시 시도해 보세요",
+  "Time expired, try again": "시간이 만료되었습니다. 다시 시도해 보세요",
+  "Your face has been used": "귀하의 얼굴이 이미 사용되었습니다",
+  "Your kyc rewards have been credited.": "귀하의 KYC 보상이 이미 입금되었습니다",
+  "The identity validate fail": "본인 인증에 실패했습니다",
+  "Your haven't started live testing yet": "귀하는 아직 라이브 테스트를 시작하지 않았습니다",
   "I. New User Creation Reward": "I. 신규 사용자 생성 보상",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "신규 사용자 인증을 완료한 후, <span style='color: rgba(184, 142, 86, 1);'>1000</span>개의 DGC 보상을 받습니다.",
   "II. Referral Reward": "II. 추천 보상",
