--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -575,7 +575,6 @@
   "You're a helpful assistant.": "Você é um assistente útil.",
   "You're now logged in.": "Você está logado agora.",
   "Your Basic Plan": "Seu plano básico",
-  "Your face has been used": "Seu rosto foi usado",
   "Youtube": "Youtube",
   "Youtube Loader Settings": "Configurações do carregador Youtube",
   "Invalid private key": "Chave privada inválida",
@@ -633,11 +632,17 @@
   "Clock In": "Registrar entrada",
   "Share": "Compartilhar",
   "Valid until": "Válido até",
-  "Done": "완료",
-  "Done...": "완료...",
-  "You have received 100 DGC points !": "100개의 DGC 포인트를 받았습니다!",
-  "Failed to received reward": "보상 수령에 실패했습니다.",
-  "You Rewards History not found": "보상 기록이 발견되지 않습니다.",
+  "Done": "Concluído",
+  "Done...": "Concluído...",
+  "You have received 100 DGC points!": "Você recebeu 100 pontos DGC!",
+  "Failed to received reward": "Falha ao receber a recompensa",
+  "You Rewards History not found": "Histórico de suas recompensas não encontrado",
+  "Try again": "Tente novamente",
+  "Time expired, try again": "O tempo expirou, tente novamente",
+  "Your face has been used": "Seu rosto já foi usado",
+  "Your kyc rewards have been credited.": "Suas recompensas de KYC foram creditadas.",
+  "The identity validate fail": "A validação da identidade falhou",
+  "Your haven't started live testing yet": "Você ainda não começou os testes ao vivo",
   "I. New User Creation Reward": "I. Recompensa por Criação de Novo Usuário",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Após completar a autenticação do novo usuário, receba uma recompensa de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Recompensa por Indicação",
