--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -574,7 +574,6 @@
   "You're a helpful assistant.": "Вы - полезный помощник",
   "You're now logged in.": "Вы теперь вошли в систему",
   "Your Basic Plan": "Ваш базовый план",
-  "Your face has been used": "Ваш лицо было использовано",
   "Youtube": "YouTube",
   "Youtube Loader Settings": "Настройки загрузчика YouTube",
   "Invalid private key": "Недействительный приватный ключ",
@@ -637,6 +636,12 @@
   "You have received 100 DGC points !": "Вы получили 100 баллов DGC!",
   "Failed to received reward": "Не удалось получить награду.",
   "You Rewards History not found": "История ваших наград не найдена.",
+  "Try again": "Попробуйте еще раз",
+  "Time expired, try again": "Время истекло, попробуйте еще раз",
+  "Your face has been used": "Ваше лицо уже было использовано",
+  "Your kyc rewards have been credited.": "Ваши награды за KYC были зачислены.",
+  "The identity validate fail": "Проверка идентификации не удалась",
+  "Your haven't started live testing yet": "Вы еще не начали тестирование вживую",
   "I. New User Creation Reward": "I. Премия за создание нового пользователя",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "После завершения аутентификации нового пользователя получите премию в <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Премия за рекомендацию",
