--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -574,7 +574,6 @@
   "You're a helpful assistant.": "คุณเป็นผู้ช่วยที่มีประโยชน์",
   "You're now logged in.": "คุณเข้าสู่ระบบแล้ว",
   "Your Basic Plan": "แผนพื้นฐานของคุณ",
-  "Your face has been used": "หน้าของคุณถูกใช้",
   "Youtube": "ยูทูป",
   "Youtube Loader Settings": "การตั้งค่าการโหลดยูทูป",
   "Invalid private key": "คีย์ส่วนตัวที่ไม่ถูกต้อง",
@@ -637,6 +636,12 @@
   "You have received 100 DGC points !": "คุณได้รับแต้ม DGC 100 แต้ม!",
   "Failed to received reward": "ไม่สามารถรับรางวัลได้",
   "You Rewards History not found": "ไม่พบประวัติการรับรางวัลของคุณ",
+  "Try again": "ลองใหม่",
+  "Time expired, try again": "เวลาถึงกำหนดแล้ว,ลองใหม่",
+  "Your face has been used": "ใบหน้าของคุณถูกใช้ไปแล้ว",
+  "Your kyc rewards have been credited.": "รางวัลจาก KYC ของคุณได้ถูกcreditedแล้ว",
+  "The identity validate fail": "การตรวจสอบตัวตนล้มเหลว",
+  "Your haven't started live testing yet": "คุณยังไม่ได้เริ่มทดสอบสด",
   "I. New User Creation Reward": "I. ค่าตอบแทนสำหรับการสร้างผู้ใช้ใหม่",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "หลังจากเสร็จสิ้นการยืนยันผู้ใช้ใหม่แล้ว รับค่าตอบแทน <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC",
   "II. Referral Reward": "II. ค่าตอบแทนสำหรับการแนะนำ",
