--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -575,7 +575,6 @@
   "You're a helpful assistant.": "Sen yararlı bir yardımcısın.",
   "You're now logged in.": "Şimdi giriş yaptın.",
   "Your Basic Plan": "Temel Planınız",
-  "Your face has been used": "Yüzünüz kullanıldı",
   "Youtube": "Youtube",
   "Youtube Loader Settings": "Youtube Yükleyici Ayarları",
   "Invalid private key": "Geçersiz özel anahtar",
@@ -638,6 +637,12 @@
   "You have received 100 DGC points !": "100 DGC puanı aldınız!",
   "Failed to received reward": "Ödül alma işlemi başarısız oldu.",
   "You Rewards History not found": "Ödül geçmişiniz bulunamadı.",
+  "Try again": "Tekrar deneyin",
+  "Time expired, try again": "Süre doldu, tekrar deneyin",
+  "Your face has been used": "Yüzünüz kullanılmıştı",
+  "Your kyc rewards have been credited.": "KYC ödülleriniz tahsil edilmiştir.",
+  "The identity validate fail": "Kimlik doğrulaması başarısız oldu",
+  "Your haven't started live testing yet": "Canlı testleri henüz başlamadınız",
   "I. New User Creation Reward": "I. Yeni Kullanıcı Oluşturma Ödülü",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Yeni kullanıcı doğrulamasını tamamladıktan sonra, <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC ödülü alırsınız.",
   "II. Referral Reward": "II. Tavsiye Ödülü",
