--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -575,7 +575,6 @@
   "You're a helpful assistant.": "Bạn là một trợ lý hữu ích.",
   "You're now logged in.": "Bạn đang đăng nhập.",
   "Your Basic Plan": "Kế hoạch cơ bản của bạn",
-  "Your face has been used": "Mặt của bạn đã được sử dụng",
   "Youtube": "Youtube",
   "Youtube Loader Settings": "Cài đặt tải lên Youtube",
   "Invalid private key": "Khóa riêng không hợp lệ",
@@ -638,6 +637,12 @@
   "You have received 100 DGC points !": "Bạn đã nhận được 100 điểm DGC!",
   "Failed to received reward": "Không thể nhận thưởng được.",
   "You Rewards History not found": "Lịch sử thưởng của bạn không được tìm thấy.",
+  "Try again": "Coba lagi",
+  "Time expired, try again": "Waktu sudah habis, coba lagi",
+  "Your face has been used": "Wajah Anda sudah digunakan",
+  "Your kyc rewards have been credited.": "Hadiah KYC Anda sudah dikreditkan",
+  "The identity validate fail": "Validasi identitas gagal",
+  "Your haven't started live testing yet": "Anda belum memulai pengujian langsung",
   "I. New User Creation Reward": "I. Thưởng cho việc tạo tài khoản người dùng mới",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Sau khi hoàn thành xác thực người dùng mới, sẽ nhận được phần thưởng <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Thưởng cho việc giới thiệu",
