--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -621,7 +621,6 @@
   "You're a helpful assistant.": "您是一个乐于助人的助手。",
   "You're now logged in.": "您现在已登录。",
   "Your Basic Plan": "您的基本计划",
-  "Your face has been used": "您的脸已被使用",
   "Youtube": "YouTube",
   "Youtube Loader Settings": "YouTube 加载器设置",
   "Unlimited DGC Reward Task": "无限DGC奖励任务",
@@ -637,6 +636,12 @@
   "You have received 100 DGC points !": "您已收到 100 个 DGC 积分！",
   "Failed to received reward": "未能领取奖励",
   "You Rewards History not found": "未找到您的奖励记录",
+  "Try again": "再试一次",
+  "Time expired, try again": "时间已过期，请再试一次",
+  "Your face has been used": "您的面部已认证过",
+  "Your kyc rewards have been credited.": "您的 KYC 奖励已入账",
+  "The identity validate fail": "身份验证失败",
+  "Your haven't started live testing yet": "您还尚未开始直播测试",
   "I. New User Creation Reward": "I. 新用户创建奖励",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "完成新用户认证后，可获得一个<span style='color: rgba(184, 142, 86, 1);'>1000</span>个 DGC 的奖励。",
   "II. Referral Reward": "II. 推荐奖励",
