更新 模型选择 、 创建钱包 下载 按钮、 节点选择

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -643,6 +643,13 @@
   "Your kyc rewards have been credited.": "Ihre KYC-Belohnungen wurden gutgeschrieben.",
   "The identity validate fail": "Die Identitätsüberprüfung ist fehlgeschlagen",
   "Your haven't started live testing yet": "Sie haben die Live-Tests noch nicht begonnen",
+  "Region": "Region",
+  "Region Setting": "Regionseinstellung",
+  "North America": "Nordamerika",
+  "Asia": "Asien",
+  "Europe": "Europa",
+  "Others": "Andere",
+  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "Um eine schnellere Übereinstimmung mit dem entsprechenden GPU-Knoten zu ermöglichen, wählen Sie bitte Ihre Region aus.",
   "I. New User Creation Reward": "I. Belohnung für die Erstellung eines neuen Benutzers",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Nach der Vervollständigung der Authentifizierung eines neuen Benutzers erhält man eine <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC-Belohnung.",
   "II. Referral Reward": "II. Empfehlungsbelohnung",
