--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -643,6 +643,13 @@
   "Your kyc rewards have been credited.": "",
   "The identity validate fail": "",
   "Your haven't started live testing yet": "",
+  "Region": "",
+  "Region Setting": "",
+  "North America": "",
+  "Asia": "",
+  "Europe": "",
+  "Others": "",
+  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "",
   "I. New User Creation Reward": "",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "",
   "II. Referral Reward": "",
