--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -642,6 +642,13 @@
   "Your kyc rewards have been credited.": "Vos récompenses de KYC ont été créditées.",
   "The identity validate fail": "La validation de l'identité a échoué",
   "Your haven't started live testing yet": "Vous n'avez pas encore commencé les tests en direct",
+  "Region": "Région",
+  "Region Setting": "Paramètres de région",
+  "North America": "Amérique du Nord",
+  "Asia": "Asie",
+  "Europe": "Europe",
+  "Others": "Autres",
+  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "Pour faciliter une correspondance plus rapide avec le noeud GPU approprié, veuillez sélectionner votre région.",
   "I. New User Creation Reward": "I. Récompense pour la création d'un nouvel utilisateur",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Après avoir effectué l'authentification du nouvel utilisateur, recevez une récompense de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Récompense pour la recommandation",
