--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -643,6 +643,13 @@
   "Your kyc rewards have been credited.": "あなたの KYC 報酬は既に入金されました",
   "The identity validate fail": "本人確認に失敗しました",
   "Your haven't started live testing yet": "あなたはまだライブテストを始めていません",
+  "Region": "ちいき",
+  "Region Setting": "ちいきせってい",
+  "North America": "北米（ほくべい）",
+  "Asia": "アジア",
+  "Europe": "ヨーロッパ",
+  "Others": "その他（そのた）",
+  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "適切（てきせつ）な GPU ノードとの照合（しょうごう）を迅速（じんそく）に行うために、あなたの地域を選択（せんたく）してください。",
   "I. New User Creation Reward": "I. 新規ユーザー作成報酬",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": " 新規ユーザー認証を完了した後、<span style='color: rgba(184, 142, 86, 1);'>1000</span>個の DGC 報酬を受け取ります。",
   "II. Referral Reward": "II. 紹介報酬",
