--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -643,6 +643,13 @@
   "Your kyc rewards have been credited.": "귀하의 KYC 보상이 이미 입금되었습니다",
   "The identity validate fail": "본인 인증에 실패했습니다",
   "Your haven't started live testing yet": "귀하는 아직 라이브 테스트를 시작하지 않았습니다",
+  "Region": "지역",
+  "Region Setting": "지역 설정",
+  "North America": "북미",
+  "Asia": "아시아",
+  "Europe": "유럽",
+  "Others": "기타",
+  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "적절한 GPU 노드와의 빠른 매칭을 위해 지역을 선택해주세요.",
   "I. New User Creation Reward": "I. 신규 사용자 생성 보상",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "신규 사용자 인증을 완료한 후, <span style='color: rgba(184, 142, 86, 1);'>1000</span>개의 DGC 보상을 받습니다.",
   "II. Referral Reward": "II. 추천 보상",
