--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -643,6 +643,13 @@
   "Your kyc rewards have been credited.": "Suas recompensas de KYC foram creditadas.",
   "The identity validate fail": "A validação da identidade falhou",
   "Your haven't started live testing yet": "Você ainda não começou os testes ao vivo",
+  "Region": "Região",
+  "Region Setting": "Configuração da região",
+  "North America": "América do Norte",
+  "Asia": "Ásia",
+  "Europe": "Europa",
+  "Others": "Outros",
+  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "Para facilitar uma correspondência mais rápida com o nó GPU apropriado, selecione sua região.",
   "I. New User Creation Reward": "I. Recompensa por Criação de Novo Usuário",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Após completar a autenticação do novo usuário, receba uma recompensa de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Recompensa por Indicação",
