--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -642,6 +642,13 @@
   "Your kyc rewards have been credited.": "รางวัลจาก KYC ของคุณได้ถูกcreditedแล้ว",
   "The identity validate fail": "การตรวจสอบตัวตนล้มเหลว",
   "Your haven't started live testing yet": "คุณยังไม่ได้เริ่มทดสอบสด",
+  "Region": "ภูมิภาค",
+  "Region Setting": "การตั้งค่าภูมิภาค",
+  "North America": "อเมริกาเหนือ",
+  "Asia": "เอเชีย",
+  "Europe": "ยุโรป",
+  "Others": "อื่นๆ",
+  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "เพื่อให้สามารถจับคู่กับโหนด GPU ที่เหมาะสมได้เร็วขึ้น โปรดเลือกภูมิภาคของคุณ",
   "I. New User Creation Reward": "I. ค่าตอบแทนสำหรับการสร้างผู้ใช้ใหม่",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "หลังจากเสร็จสิ้นการยืนยันผู้ใช้ใหม่แล้ว รับค่าตอบแทน <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC",
   "II. Referral Reward": "II. ค่าตอบแทนสำหรับการแนะนำ",
