--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -643,6 +643,13 @@
   "Your kyc rewards have been credited.": "KYC ödülleriniz tahsil edilmiştir.",
   "The identity validate fail": "Kimlik doğrulaması başarısız oldu",
   "Your haven't started live testing yet": "Canlı testleri henüz başlamadınız",
+  "Region": "Bölge",
+  "Region Setting": "Bölge Ayarları",
+  "North America": "Kuzey Amerika",
+  "Asia": "Asya",
+  "Europe": "Avrupa",
+  "Others": "Diğerler",
+  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "Uygun GPU düğümüyle daha hızlı bir eşleşme sağlamak için lütfen bölgenizi seçin.",
   "I. New User Creation Reward": "I. Yeni Kullanıcı Oluşturma Ödülü",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Yeni kullanıcı doğrulamasını tamamladıktan sonra, <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC ödülü alırsınız.",
   "II. Referral Reward": "II. Tavsiye Ödülü",
