--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -642,6 +642,13 @@
   "Your kyc rewards have been credited.": "您的 KYC 奖励已入账",
   "The identity validate fail": "身份验证失败",
   "Your haven't started live testing yet": "您还尚未开始直播测试",
+  "Region": "地区",
+  "Region Setting": "地区设置",
+  "North America": "北美洲",
+  "Asia": "亚洲",
+  "Europe": "欧洲",
+  "Others": "其他",
+  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "为了便于与合适的 GPU 节点更快地匹配，请选择您的地区。",
   "I. New User Creation Reward": "I. 新用户创建奖励",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "完成新用户认证后，可获得一个<span style='color: rgba(184, 142, 86, 1);'>1000</span>个 DGC 的奖励。",
   "II. Referral Reward": "II. 推荐奖励",
