--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -643,6 +643,13 @@
   "Your kyc rewards have been credited.": "Tus recompensas de KYC han sido acreditadas.",
   "The identity validate fail": "La validación de la identidad ha fallado",
   "Your haven't started live testing yet": "Todavía no has comenzado las pruebas en vivo",
+  "Region": "Región",
+  "Region Setting": "Configuración de la región",
+  "North America": "América del Norte",
+  "Asia": "Asia",
+  "Europe": "Europa",
+  "Others": "Otros",
+  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "Para facilitar una coincidencia más rápida con el nodo GPU apropiado, seleccione su región.",
   "I. New User Creation Reward": "I. Recompensa por la Creación de un Nuevo Usuario",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Después de completar la autenticación del nuevo usuario, recibe una recompensa de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Recompensa por Recomendación",
