--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -643,6 +643,13 @@
   "Your kyc rewards have been credited.": "Hadiah KYC Anda telah dikreditkan.",
   "The identity validate fail": "Validasi identitas gagal",
   "Your haven't started live testing yet": "Anda belum memulai pengujian langsung",
+  "Region": "Wilayah",
+  "Region Setting": "Pengaturan Wilayah",
+  "North America": "Amerika Utara",
+  "Asia": "Asia",
+  "Europe": "Eropa",
+  "Others": "Lainnya",
+  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "Untuk memudahkan pencocokan lebih cepat dengan node GPU yang sesuai, silakan pilih wilayah Anda.",
   "I. New User Creation Reward": "I. Hadiah Pembuatan Pengguna Baru",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Setelah menyelesaikan autentikasi pengguna baru, terima hadiah sebesar <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Hadiah Rujukan",
