--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -642,6 +642,13 @@
   "Your kyc rewards have been credited.": "Ваши награды за KYC были зачислены.",
   "The identity validate fail": "Проверка идентификации не удалась",
   "Your haven't started live testing yet": "Вы еще не начали тестирование вживую",
+  "Region": "Регион",
+  "Region Setting": "Настройка региона",
+  "North America": "Северная Америка",
+  "Asia": "Азия",
+  "Europe": "Европа",
+  "Others": "Другие",
+  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "Для более быстрого соответствия с соответствующим узлом GPU выберите свой регион.",
   "I. New User Creation Reward": "I. Премия за создание нового пользователя",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "После завершения аутентификации нового пользователя получите премию в <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Премия за рекомендацию",
