--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -643,6 +643,13 @@
   "Your kyc rewards have been credited.": "Hadiah KYC Anda sudah dikreditkan",
   "The identity validate fail": "Validasi identitas gagal",
   "Your haven't started live testing yet": "Anda belum memulai pengujian langsung",
+  "Region": "Vùng",
+  "Region Setting": "Cài đặt vùng",
+  "North America": "Mỹ Bắc",
+  "Asia": "Châu Á",
+  "Europe": "Châu Âu",
+  "Others": "Các loại khác",
+  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "Để thuận tiện cho việc tìm kiếm nhanh hơn với nút GPU thích hợp, xin vui lòng chọn vùng của bạn.",
   "I. New User Creation Reward": "I. Thưởng cho việc tạo tài khoản người dùng mới",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Sau khi hoàn thành xác thực người dùng mới, sẽ nhận được phần thưởng <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Thưởng cho việc giới thiệu",
