--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -649,7 +649,8 @@
   "Asia": "アジア",
   "Europe": "ヨーロッパ",
   "Others": "その他（そのた）",
-  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "適切（てきせつ）な GPU ノードとの照合（しょうごう）を迅速（じんそく）に行うために、あなたの地域を選択（せんたく）してください。",
+  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "適切な GPU ノードとの迅速なマッチングを容易にするために、あなたの地域を選択してください。",
+  "Please select at least one model.": "少なくとも 1 つのモデルを選択してください。",
   "I. New User Creation Reward": "I. 新規ユーザー作成報酬",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": " 新規ユーザー認証を完了した後、<span style='color: rgba(184, 142, 86, 1);'>1000</span>個の DGC 報酬を受け取ります。",
   "II. Referral Reward": "II. 紹介報酬",
