--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -649,6 +649,7 @@
   "Europe": "Европа",
   "Others": "Другие",
   "To facilitate a quicker match with the appropriateGPU node, please select your region.": "Для более быстрого соответствия с соответствующим узлом GPU выберите свой регион.",
+  "Please select at least one model.": "Пожалуйста, выберите хотя бы один модель.",
   "I. New User Creation Reward": "I. Премия за создание нового пользователя",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "После завершения аутентификации нового пользователя получите премию в <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Премия за рекомендацию",
