--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -650,6 +650,7 @@
   "Europe": "Châu Âu",
   "Others": "Các loại khác",
   "To facilitate a quicker match with the appropriateGPU node, please select your region.": "Để thuận tiện cho việc tìm kiếm nhanh hơn với nút GPU thích hợp, xin vui lòng chọn vùng của bạn.",
+  "Please select at least one model.": "Vui lòng chọn ít nhất một mô hình.",
   "I. New User Creation Reward": "I. Thưởng cho việc tạo tài khoản người dùng mới",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Sau khi hoàn thành xác thực người dùng mới, sẽ nhận được phần thưởng <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Thưởng cho việc giới thiệu",
