更新提示语？

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -650,6 +650,7 @@
   "Europe": "Europa",
   "Others": "Andere",
   "To facilitate a quicker match with the appropriateGPU node, please select your region.": "Um eine schnellere Übereinstimmung mit dem entsprechenden GPU-Knoten zu ermöglichen, wählen Sie bitte Ihre Region aus.",
+  "Please select at least one model.": "Bitte wählen Sie mindestens ein Modell aus.",
   "I. New User Creation Reward": "I. Belohnung für die Erstellung eines neuen Benutzers",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Nach der Vervollständigung der Authentifizierung eines neuen Benutzers erhält man eine <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC-Belohnung.",
   "II. Referral Reward": "II. Empfehlungsbelohnung",
