--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -650,6 +650,7 @@
   "Europe": "",
   "Others": "",
   "To facilitate a quicker match with the appropriateGPU node, please select your region.": "",
+  "Please select at least one model.": "",
   "I. New User Creation Reward": "",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "",
   "II. Referral Reward": "",
